--- a/Documentazione/Iterazione1/Test.tex
+++ b/Documentazione/Iterazione1/Test.tex
@@ -1,5 +1,5 @@
 \subsection{Testing}
-\subsubsection{Analisi Statica - CodMR}
+\subsubsection{Analisi Statica - CodeMR}
 
 L'analisi statica del codice è stata gestita tramite il tool CodeMR.
 
@@ -30,7 +30,7 @@ L'analisi statica del codice è stata gestita tramite il tool CodeMR.
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.9\textwidth]{images/Problem3_iter1.png}
-    \caption{Problemi classi}
+    \caption{Problemi classi 2}
     \label{fig:Problemi_iterazione1}
 \end{figure}
 
