--- a/Documentazione/Iterazione2/Test2.tex
+++ b/Documentazione/Iterazione2/Test2.tex
@@ -85,7 +85,7 @@ Questa sezione documenta i test d'unità implementati per l'iterazione 2. Sono s
 
 \subsubsection{API Costi}
 
-Questa sezione documenta le API relative alla gestione dei **costi** e degli **alert**  nel sistema **Spendly**, inclusi la creazione, l'eliminazione e la visualizzazione dei costi di utenti e gruppi. Ogni test verrà mostrato con un'**immagine dei risultati**.
+Questa sezione documenta le API relative alla gestione dei costi e degli alert  nel sistema Spendly, inclusi la creazione, l'eliminazione e la visualizzazione dei costi di utenti e gruppi. Ogni test verrà mostrato con un'immagine dei risultati.
 
 \paragraph{Aggiunta di un Costo}  
 
