Update Doc: fixing CasiUsoImpl

--- a/Documentazione/Iterazione3/CasiUsoImpl.tex
+++ b/Documentazione/Iterazione3/CasiUsoImpl.tex
@@ -1,7 +1,10 @@
-\subsubsection{Iterazione 3}
-In questa iterazione sono stati sviluppati i casi d’uso relativi alle \emph{spese personali}, alla \emph{gestione del budget} e alla \emph{gestione del risparmio}. Quest’ultima funzionalità permette all’utente di creare uno o più piani di risparmio con un obiettivo definito, in modo da accantonare denaro per esigenze future.
+\subsubsection{Casi d'uso Implementati}
+% Richiamo al testo introduttivo generale già presente in Introduzione.tex
+% (Per ulteriori dettagli sulla gestione del budget e del risparmio, vedere il file Introduzione.tex.)
+% Di seguito sono riportati i casi d’uso specifici implementati in questa iterazione.
 
-\textbf{Nota:} I casi \textbf{UC28}, \textbf{UC29}, \textbf{UC30} e \textbf{UC31} dedicati alla gestione del risparmio sono stati aggiunti in questa iterazione e non erano presenti in Iterazione 0.
+\textbf{Nota:} I casi d’uso UC28, UC29, UC30 e UC31, relativi alla gestione del risparmio,
+sono stati aggiunti in questa iterazione e non erano presenti in Iterazione 0.
 
 \begin{table}[h]
     \centering
