--- a/Documentazione/Iterazione2/CasiUsoImpl.tex
+++ b/Documentazione/Iterazione2/CasiUsoImpl.tex
@@ -8,16 +8,23 @@ In questa iterazione sono stati sviluppati i seguenti casi d’uso ritenuti prio
     \hline
     \textbf{ID} & \textbf{Titolo} \\ \hline
     UC4  & Crea alert di gruppo \\ \hline
+    UC5  & Modifica alert \\ \hline
     UC6  & Elimina alert \\ \hline
-    UC12 & Accedi gruppo \\ \hline
-    UC13 & Inserisci spesa \\ \hline
-    UC14 & Elimina spesa \\ \hline
-    UC15 & Modifica spesa \\ \hline
-    UC16 & Scegli tipologia spesa \\ \hline
-    UC17 & Visualizza spese \\ \hline
-    UC18 & Ricalcolo debiti \\ \hline
+    UC7  & Scegli tipologia alert \\ \hline
+    UC8  & Crea gruppo \\ \hline
+    UC9  & Invita membri \\ \hline
+    UC10 & Elimina membri \\ \hline
+    UC11 & Modifica membri \\ \hline
+    UC12 & Elimina gruppo \\ \hline
+    UC13 & Accedi gruppo \\ \hline
+    UC14 & Inserisci spesa \\ \hline
+    UC15 & Elimina spesa \\ \hline
+    UC16 & Modifica spesa \\ \hline
+    UC17 & Scegli tipologia spesa \\ \hline
+    UC18 & Visualizza spese \\ \hline
+    UC19 & Ricalcolo debiti \\ \hline
     \end{tabular}
-    \caption{Iterazione2}
+    \caption{Iterazione2 - Casi d'Uso Implementati.}
 \end{table}
 
 \subsubsection{UC4: Creazione Alert di Gruppo}
